  - Japanese localisation updated to 3.0.0 (UI)
  - Russian localisation updated to 3.0.0 (UI, readme, Instant Start)
  - Turkish localisation updated to 3.0.0 (UI)

----------------------------------------------------------------------
 OmegaT 2.6.3 update 7
----------------------------------------------------------------------
   0 Enhancement
   1 Bug fix
   0 Localisation update
----------------------------------------------------------------------
2.6.3 update 7 vs. 2.6.3 update 6

  Bug fixes: 

  - Word plugin causes weird inline code in OmegaT
  https://sourceforge.net/p/omegat/bugs/645/

----------------------------------------------------------------------
 OmegaT 2.6.3 update 6
----------------------------------------------------------------------
   0 Enhancement
   1 Bug fix
   0 Localisation update
----------------------------------------------------------------------
2.6.3 update 6 vs. 2.6.3 update 5

  Bug fixes: 

  - Workaround for slowness in the Editor with Java 1.7_045

----------------------------------------------------------------------
 OmegaT 2.6.3 update 5
----------------------------------------------------------------------
   1 Enhancement
   5 Bug fixes
   0 Localisation update
----------------------------------------------------------------------
2.6.3 update 5 vs. 2.6.3 update 4

  Implemented requests:

  - Update JRE to 1.7 
  https://sourceforge.net/p/omegat/feature-requests/793/

  Bug fixes: 

  - Ignore content of sdl:seg-defs tags in OmegaT's XLIFF filter
  https://sourceforge.net/p/omegat/bugs/624/

  - Filtering the Editor results in losing unsaved changes in the current segment
  https://sourceforge.net/p/omegat/bugs/627/

  - tm/auto folder is created in wrong location
  https://sourceforge.net/p/omegat/bugs/553/

  - If project location properties changed to blank, OmegaT freezes after reloading project 
  https://sourceforge.net/p/omegat/bugs/632/
